refactor: fix padLeft Javadoc and use .toList() consistently in SpringBatchFormatter